- Add unit tests.